# aksis

./: .flake8  .gitignore  Dockerfile  LICENSE  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml
src/aksis/: __init__.py  cli.py
src/aksis/data/: __init__.py  dataloader.py  tokenizer.py
src/aksis/deploy/: __init__.py  api.py  docker.py  monitor.py  optimizer.py  scaler.py
src/aksis/eval/: __init__.py  dataset.py  evaluator.py  fine_tuner.py  visualizer.py
src/aksis/inference/: __init__.py  chatbot.py  context_manager.py  inference.py  sampler.py
src/aksis/model/: __init__.py  attention.py  feed_forward.py  positional_encoding.py  transformer.py
src/aksis/models/: __init__.py
src/aksis/train/: __init__.py  checkpoint.py  dataset.py  metrics.py  optimizer.py  trainer.py
src/aksis/training/: __init__.py
src/aksis/utils/: __init__.py  device.py  logging.py
tests/: __init__.py  test_dataloader.py  test_integration.py  test_tokenizer.py  test_utils.py
tests/deploy/: __init__.py  test_api.py  test_api_simple.py  test_docker.py  test_monitor.py  test_optimizer.py  test_scaler.py
tests/eval/: __init__.py  test_dataset.py  test_evaluator.py  test_fine_tuner.py  test_visualizer.py
tests/inference/: __init__.py  test_chatbot.py  test_context_manager.py  test_inference.py  test_sampler.py
tests/model/: test_attention.py  test_feed_forward.py  test_positional_encoding.py  test_transformer.py
tests/train/: test_checkpoint.py  test_dataset.py  test_metrics.py  test_optimizer.py  test_trainer.py
